# Introduction-to-Data-Pipelines-and-Apache-Airflow

airflow/mnt/dags/: day_3_dag.py  dog_api_pipeline.py  everyday_dag.py  weather_api_dag.py
my_first_project/: dogs.json  my_first_data_pipeline.py  pyproject.toml
